syntax = "proto3";


package carrel.server.firefly_keeper.v1;


import "carrel/firefly_keeper/v1/firefly_keeper_v1.proto";

message ScanFolderForFirefliesRequest {
    string directory = 1;
    bool classified_only = 2;
    repeated string ignore_directories = 3;
}

service FirefliesService {
    rpc ScanFolderForFireflies(
        ScanFolderForFirefliesRequest
    ) returns (
        ScanFolderForFirefliesResponse
    );
    rpc ScanFilesForFireflies(
        ScanFilesForFirefliesRequest
    ) returns (
        ScanFilesForFirefliesResponse
    );

    // test background
    rpc TestBackground(
        TestBackgroundRequest
    ) returns (
        TestBackgroundResponse
    );
}

message ScanFolderForFirefliesResponse {
    carrel.firefly_keeper.v1.Fireflies fireflies = 1;
}

message ScanFilesForFirefliesRequest {
    repeated string files = 1;
    bool classified_only = 2;
}

message ScanFilesForFirefliesResponse {
    carrel.firefly_keeper.v1.Fireflies fireflies = 1;
}



message TestBackgroundRequest {
    string message = 1;
}

message TestBackgroundResponse {
    string message = 1;
}
